--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -14,3 +14,7 @@
 button.match-input-height {
     height: var(--mat-form-field-container-height) !important;
 }
+
+.mdc-notched-outline__notch {
+    border-right-style: none !important;
+}
