--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,3 +18,15 @@ button.match-input-height {
 .mdc-notched-outline__notch {
     border-right-style: none !important;
 }
+
+.mat-mdc-snack-bar-container.snack-error {
+    --mdc-snackbar-container-color: rgb(194, 27, 27);
+    --mat-snack-bar-button-color: #fff;
+    --mdc-snack-bar-supporting-text-color: #fff;
+}
+
+.mat-mdc-snack-bar-container.snack-success {
+    --mdc-snackbar-container-color: green;
+    --mat-snack-bar-button-color: #fff;
+    --mdc-snack-bar-supporting-text-color: #fff;
+}
