--- a/client/src/app/features/shop/product-details/product-details.component.html
+++ b/client/src/app/features/shop/product-details/product-details.component.html
@@ -8,6 +8,9 @@
 
                 <div>
                     <h1 class="text-2xl font-semibold text-gray-900">{{product.name}}</h1>
+                    
+                    <p>You have {{quantityInCart}}</p>
+                    
                     <div class="mt-4 flex items-center gap-4">
                         <p class="text-3xl font-extrabold text-gray-900">
                             {{product.price | currency}}
@@ -15,14 +18,16 @@
                     </div>
 
                     <div class="flex gap-4 mt-6 mb-6"> 
-                        <button mat-flat-button class="p-3 text-sm bg-blue-600 text-white rounded-md flex items-center gap-2">
+                        <button [disabled]="quantity === quantityInCart "  
+                            (click)="updateCart()"
+                            mat-flat-button class="p-3 text-sm bg-blue-600 text-white rounded-md flex items-center gap-2">
                             <mat-icon>shopping_cart</mat-icon>
-                            Add to cart
+                            {{getButtonText()}}
                         </button>
 
                         <mat-form-field appearance="outline" class="flex-1">
                             <mat-label>Quantity</mat-label>
-                            <input matInput type="number">
+                            <input matInput min="0" [(ngModel)]="quantity" type="number">
                         </mat-form-field>   
                     </div>
 
