--- a/client/src/app/features/checkout/checkout.component.html
+++ b/client/src/app/features/checkout/checkout.component.html
@@ -1,3 +1,3 @@
 <div class="mt-5">
-    <h1 class="text-2xl">Only authorized users should be able to see this!</h1>
+    <h1 class="text-2xl">Only authorized users should be able to see this and those with something in the card should be able to see it!</h1>
 </div>
