--- a/client/src/app/features/account/register/register.component.html
+++ b/client/src/app/features/account/register/register.component.html
@@ -3,15 +3,25 @@
         <div class="text-center mb-6">
             <h1 class="text-3xl font-semibold text-primary">Register</h1>
         </div>
-        <app-text-input label="First name" formControlName="firstName"></app-text-input>
-        <app-text-input label="Last name" formControlName="lastName"></app-text-input>
-        <app-text-input label="Email address" formControlName="email"></app-text-input>
-        <app-text-input label="Password" formControlName="password" type="password"></app-text-input>
-        <button 
-            [disabled]="registerForm.invalid"
-            mat-flat-button color="primary" 
-            type="submit" class="w-full py-2">Register
-        </button>
+        <app-text-input label="First name" formControlName="firstName" />
+        <app-text-input label="Last name" formControlName="lastName" />
+        <app-text-input label="Email address" formControlName="email" />
+        <app-text-input label="Password" formControlName="password" type="password" />
+
+        @if (validationErrors) {
+            <div class="mb-3 p-4 bg-red-100 text-red-600">
+                <ul class="list-disc px-3">
+                    @for (error of validationErrors; track $index) {
+                        <li>{{error}}</li>
+                    }
+                </ul>
+            </div>
+        }
+
+        <button
+            [disabled]="registerForm.invalid" 
+            mat-flat-button 
+            type="submit" 
+            class="w-full py-2">Register</button>
     </form>
 </mat-card>
-
