--- a/client/src/app/shared/components/order-summary/order-summary.component.html
+++ b/client/src/app/shared/components/order-summary/order-summary.component.html
@@ -29,10 +29,13 @@
                 </dd>
             </dl>
         </div>
-        <div class="flex flex-col gap-2">
-            <button routerLink="/checkout" mat-flat-button>Checkout</button>
-            <button routerLink="/shop" mat-button>Continue Shopping</button>
-        </div>
+        @if (location.path() !== "/checkout") {
+            <div class="flex flex-col gap-2">
+                <button routerLink="/checkout" mat-flat-button>Checkout</button>
+                <button routerLink="/shop" mat-button>Continue Shopping</button>
+            </div>
+        }
+        
     </div>
     <div class="space-y-4 rounded-lg border border-gray-200 bg-white shadow-sm">
         <form class="space-y-2 flex flex-col p-2">
