--- a/client/src/app/features/home/home.component.html
+++ b/client/src/app/features/home/home.component.html
@@ -1,1 +1,26 @@
-<p>home works!</p>
+<div class="max-w-screen-2xl mx-auto px-4 mt-32">
+    <div class="relative flex flex-col items-center py-24 justify-center rounded-2xl shadow-2xl overflow-hidden">
+        <img
+            class="absolute inset-0 w-full h-full object-cover rounded-2xl brightness-75"
+            src="../images/hero1.jpg"
+            alt="Ski resort image"
+        >
+
+        <div class="relative flex flex-col p-12 bg-white/10 backdrop-blur-lg border border-white/30 rounded-2xl items-center text-center shadow-lg">
+            <h1 class="text-white text-6xl font-extrabold tracking-wide drop-shadow-lg">
+                Welcome to <span class="text-cyan-300">SkiNet!</span>
+            </h1>
+            <p class="mt-4 text-lg text-white/90 max-w-xl">
+                Explore the best skiing gear and accessories for your next adventure.
+            </p>
+
+            <button
+                class="mt-10 px-10 py-4 text-2xl font-semibold text-white bg-gradient-to-r from-blue-500 to-cyan-400
+                    rounded-full shadow-lg transition-all duration-300 hover:scale-105 hover:shadow-xl"
+                routerLink="/shop"
+            >
+                Go to Shop 🏔️
+            </button>
+        </div>
+    </div>
+</div>
